Simplify and improve the example server
Remove the threading and the "fancy" synthetic generation of
data (that's all in testserver/ now).

Show how to reply to readdir and symlink requests.

Change-Id: Id60a02759bda8234e997b839e659a2fa5651e118

--- a/examples/README
+++ b/examples/README
@@ -1,7 +1,4 @@
 Examples:
 
-ex1server - a tiny server with two (mostly non-conflicting) goals:
-- demonstrate (close to) the minimum amount of code needed to
-  get a server running
-- provide a low-overhead, high-speed server that can be used for
-  benchmarking the libfs123 server implementation.
+ex1server - a tiny server that demonstrates (close to) the minimum
+ amount of code needed to get a server running
